# apikeylib

./: .gitignore  README.md  build.gradle  checkstyle.gradle  gradle.properties  settings.gradle
apikeylib/: CMakeLists.txt  build.gradle  gradle.properties
apikeylib/src/main/: AndroidManifest.xml
apikeylib/src/main/cpp/: api_helper.cpp  api_helper.h  string_helper.h
apikeylib/src/main/cpp/encrypt/: md5.cpp  md5.h  urlEncode.h
apikeylib/src/main/java/com/jack/apikeylib/: SignHelper.java
apikeylib/src/main/res/values/: strings.xml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/cn/jony/apikeynativelib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/jack/apikeynativelib/: EncryptUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/jony/apikeynativelib/: ExampleUnitTest.java
config/: android-artifacts.gradle  gradle-mvn-push.gradle  java-artifacts.gradle
config/style/: checkstyle.xml
gradle/wrapper/: gradle-wrapper.properties
